tests/snapshots/compile_core_o_all__addition.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/addition.hvm
---
@main = a
  & @main__C0 ~ (8 a)

@main__C0 = (a b)
  & $(1 $(:[+] $(a b))) ~ [+1]
