tests/snapshots/compile_core_o_all__addition_var_fst.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/addition_var_fst.hvm
---
@main = ($([+1] a) a)
