tests/snapshots/compile_core_o_all__adt_option_and.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/adt_option_and.hvm
---
@None = (* (a a))

@Option.and = ((@Option.and__C1 ((* @None) a)) a)

@Option.and__C0 = (b (a c))
  & @Some ~ ((a b) c)

@Option.and__C1 = (a ((@Option.and__C0 ((* @None) (a b))) b))

@Some = (a ((a b) (* b)))

@main = c
  & @Option.and ~ (a (b c))
  & @Some ~ (1 a)
  & @Some ~ (3 b)
