tests/snapshots/compile_core_o_all__adt_string.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/adt_string.hvm
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_core_o_all/adt_string.hvm :
String is a built-in datatype and should not be overridden.
[0m  1 | [4m[31mdata String = S
[0m  2 | [4m[31m
[0m  3 | [4m[31m[0mmain = S[0m
