tests/snapshots/compile_core_o_all__and.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/and.hvm
---
@and = (b (((a a) ((* @false) (b c))) c))

@false = (* (a a))

@main = a
  & @and ~ (@true (@false a))

@true = (a (* a))
