tests/snapshots/compile_core_o_all__bad_parens_making_erased_let.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/bad_parens_making_erased_let.hvm
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unbound variable 'two'.
  Unbound variable 'qua'.
