tests/snapshots/compile_core_o_all__cyclic_dup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/cyclic_dup.hvm
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mmain[0m[1m':[0m
  Unbound variable 'y1'.
