tests/snapshots/compile_core_o_all__double_main.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/double_main.hvm
---
[4m[1m[31mErrors:[0m
File has both 'main' and 'Main' definitions.
