tests/snapshots/compile_core_o_all__eta_chain.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_core_o_all/eta_chain.hvm
---
@Bar = a
  & @Baz ~ a

@Baz = ($(:[+] $(b c)) ($(:[+] $(a b)) (a c)))

@Foo = a
  & @Bar ~ a

@main = a
  & @Foo ~ a
